--- a/style.css
+++ b/style.css
@@ -24,6 +24,10 @@ body{
     font-size: 6vw;
     text-align: center;
     cursor: pointer;
+    transition: all;
+    transition-delay: 0s;
+    transition-duration: 0.3s;
+    transition-timing-function: ease-out;
 }
 .tile2{
     display: table-cell;
@@ -34,6 +38,10 @@ body{
     font-size: 6vw;
     text-align: center;
     cursor: pointer;
+    transition: all;
+    transition-delay: 0s;
+    transition-duration: 0.3s;
+    transition-timing-function: ease-out;
 }
 .tile3{
     display: table-cell;
@@ -44,6 +52,10 @@ body{
     font-size: 6vw;
     text-align: center;
     cursor: pointer;
+    transition: all;
+    transition-delay: 0s;
+    transition-duration: 0.3s;
+    transition-timing-function: ease-out;
 }
 .tile4{
     display: table-cell;
@@ -54,6 +66,10 @@ body{
     font-size: 6vw;
     text-align: center;
     cursor: pointer;
+    transition: all;
+    transition-delay: 0s;
+    transition-duration: 0.3s;
+    transition-timing-function: ease-out;
 }
 .tile5{
     display: table-cell;
@@ -64,6 +80,10 @@ body{
     font-size: 6vw;
     text-align: center;
     cursor: pointer;
+    transition: all;
+    transition-delay: 0s;
+    transition-duration: 0.3s;
+    transition-timing-function: ease-out;
 }
 .tile6{
     display: table-cell;
@@ -74,6 +94,10 @@ body{
     font-size: 6vw;
     text-align: center;
     cursor: pointer;
+    transition: all;
+    transition-delay: 0s;
+    transition-duration: 0.3s;
+    transition-timing-function: ease-out;
 }
 .tile7{
     display: table-cell;
@@ -84,6 +108,10 @@ body{
     font-size: 6vw;
     text-align: center;
     cursor: pointer;
+    transition: all;
+    transition-delay: 0s;
+    transition-duration: 0.3s;
+    transition-timing-function: ease-out;
 }
 .tile8{
     display: table-cell;
@@ -94,6 +122,10 @@ body{
     font-size: 6vw;
     text-align: center;
     cursor: pointer;
+    transition: all;
+    transition-delay: 0s;
+    transition-duration: 0.3s;
+    transition-timing-function: ease-out;
 }
 .tile9{
     display: table-cell;
@@ -104,6 +136,10 @@ body{
     font-size: 6vw;
     text-align: center;
     cursor: pointer;
+    transition: all;
+    transition-delay: 0s;
+    transition-duration: 0.3s;
+    transition-timing-function: ease-out;
 }
 .tile10{
     display: table-cell;
@@ -114,6 +150,10 @@ body{
     font-size: 6vw;
     text-align: center;
     cursor: pointer;
+    transition: all;
+    transition-delay: 0s;
+    transition-duration: 0.3s;
+    transition-timing-function: ease-out;
 }
 .tile11{
     display: table-cell;
@@ -124,6 +164,10 @@ body{
     font-size: 6vw;
     text-align: center;
     cursor: pointer;
+    transition: all;
+    transition-delay: 0s;
+    transition-duration: 0.3s;
+    transition-timing-function: ease-out;
 }
 .tile12{
     display: table-cell;
@@ -134,6 +178,10 @@ body{
     font-size: 6vw;
     text-align: center;
     cursor: pointer;
+    transition: all;
+    transition-delay: 0s;
+    transition-duration: 0.3s;
+    transition-timing-function: ease-out;
 }
 .tile13{
     display: table-cell;
@@ -144,6 +192,10 @@ body{
     font-size: 6vw;
     text-align: center;
     cursor: pointer;
+    transition: all;
+    transition-delay: 0s;
+    transition-duration: 0.3s;
+    transition-timing-function: ease-out;
 }
 .tile14{
     display: table-cell;
@@ -154,6 +206,10 @@ body{
     font-size: 6vw;
     text-align: center;
     cursor: pointer;
+    transition: all;
+    transition-delay: 0s;
+    transition-duration: 0.3s;
+    transition-timing-function: ease-out;
 }
 .tile15{
     display: table-cell;
@@ -164,6 +220,10 @@ body{
     font-size: 6vw;
     text-align: center;
     cursor: pointer;
+    transition: all;
+    transition-delay: 0s;
+    transition-duration: 0.3s;
+    transition-timing-function: ease-out;
 }
 .tile16{
     display: table-cell;
@@ -174,4 +234,8 @@ body{
     font-size: 6vw;
     text-align: center;
     cursor: pointer;
+    transition: all;
+    transition-delay: 0s;
+    transition-duration: 0.3s;
+    transition-timing-function: ease-out;
 }
