--- a/style.css
+++ b/style.css
@@ -280,6 +280,9 @@ body{
     margin-left: 1vw;
     border-radius: 10px;
 }
+.btn:hover{
+    background-color: rgb(24, 54, 24);
+}
 .moves{
     position: absolute;
     font-size: 200%;
