--- a/style.css
+++ b/style.css
@@ -8,24 +8,28 @@ body{
     background-color: red;
 }
 #top-bar{
+    display: inline-block;
+    position: relative;
     background-color: rgb(231, 144, 14);
     text-align: center;
     font-size: 230%;
-    width: 32vw;
-    margin: auto;
+    width: 33vw;
+    left: 25vw;
     border-radius: 1vw;
     margin-top: 5vw;
     color: whitesmoke;
     border: 2px yellow solid;
 }
 #big-box{
-    margin: auto;
-    width: 32vw;
-    height: 32vw;
+    position: relative;
+    left: 25vw;
+    display: block;
+    width: 33vw;
 }
 .row{
-    display: table-row;
-    height: 25%;
+    display: block;
+    width: 33vw;
+    text-align: center;
 }
 .tile1{
     display: table-cell;
@@ -277,8 +281,9 @@ body{
     top: 22vw;
     padding: 1vh 1vw 1vh 1vw;
     cursor: pointer;
-    left:68vw;
+    left: 58vw;
     border-radius: 10px;
+    margin-left: 1vw;
 }
 .btn:hover{
     background-color: rgb(24, 54, 24);
@@ -295,7 +300,7 @@ body{
     margin-left: 1vw;
     border-radius: 10px;
     text-align: center;
-    left: 68vw;
+    left: 58vw;
 }
 .timer{
     position: absolute;
@@ -309,5 +314,5 @@ body{
     margin-left: 1vw;
     border-radius: 10px;
     text-align: center;
-    left: 77vw;
+    left: 67vw;
 }
